--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,3 +29,8 @@ jobs:
       with:
         name: some-test-app
         path: publish/
+    - name: Create ZIP archive
+      run: zip -r SomeTestApp.zip publish/
+    - name: Send File via SSH
+      run: |
+        scp -i ${{ secrets.SSH_PRIVATE_KEY }} -P ${{ secrets.SSH_PORT }} SomeTestApp.zip ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USERNAME }}
