--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,5 +33,6 @@ jobs:
       run: zip -r SomeTestApp.zip publish/
     - name: Send File via SSH
       run: |
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > private.key
+        SECRET_CONTENT="${{ secrets.SSH_PRIVATE_KEY }}"
+        echo "$SECRET_CONTENT" > private.key
         scp -i private.key -P ${{ secrets.SSH_PORT }} SomeTestApp.zip ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USERNAME }}
