--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,6 @@ jobs:
       run: zip -r SomeTestApp.zip publish/
     - name: Send File via SSH
       run: |
-        SECRET_CONTENT="${{ secrets.SSH_PRIVATE_KEY }}"
-        echo "$SECRET_CONTENT" > private.key
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > private.key
         chmod 600 private.key
         scp -i private.key -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null SomeTestApp.zip ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USERNAME }}
